@@ -51,8 +51,14 @@ It supports the following features:
 Note that the specification requires the measured values to be
 integers no larger than 64-bits, but ideally 53-bits.
 
-The current implementation does not validate the values. If you want
-validation, see L<Net::Statsd::Lite>.
+The current implementation does not validate that the values you pass
+to metrics conform to the spec, which allows you to take advantage of
+extensions to some StatsD daemons. But the downside is that other
+daemons may ignore those metrics.
+
+For simplicity, it will allow you to specify a sampling rate for any
+metric, not just the ones where it is documented below. But again,
+some daemons may ignore or reject this.
 
 =head1 ATTRIBUTES
 
